--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_height="match_parent"
+<LinearLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#576EEA"
+    android:background="#5CA59D"
     android:orientation="vertical"
     tools:context=".MainActivity"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -12,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:textSize="36dp"
-        android:textColor="@color/white"
+        android:textColor="#95FFFFFF"
         android:text="Holiday Booking"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -38,11 +39,12 @@
         android:id="@+id/checkin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Select Check-in Date"
-        android:text=""
+        android:text="Select Check-in Date"
         android:textSize="20sp"
+        android:focusable="false"
         android:layout_marginTop="20dp"
         android:padding="15dp"
+        android:textColor="#8288AE"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:background="#C2D8EC" />
@@ -51,9 +53,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="13dp"
+        android:focusable="false"
+        android:textColor="#8288AE"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:hint="Select Check-out Date"
+        android:text="Select Check-out Date"
         android:textSize="20sp"
         android:background="#C2D8EC"
         android:layout_marginTop="20dp" />
@@ -63,9 +67,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
+        android:textColor="#8288AE"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:hint="No. of adults"
+        android:text="No. of adults"
         android:background="#C2D8EC"
         android:textSize="20sp"
         android:layout_marginTop="20dp" />
@@ -74,7 +79,9 @@
         android:id="@+id/child"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="No. of Children"
+        android:text="No. of Children"
+        android:textColor="#8288AE"
+        android:focusable="false"
         android:background="#C2D8EC"
         android:layout_marginTop="20dp"
         android:padding="15dp"
@@ -87,8 +94,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Book Hotel"
+        android:textColor="#DFDBDB"
         android:textSize="20sp"
-        android:background="#51CABE"
+        android:background="#2E7A72"
         android:padding="19dp"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
