--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -28,7 +28,7 @@
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:text="Total"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:text="Adult"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="wrap_content"
@@ -46,60 +46,69 @@
             android:layout_marginTop="20dp"
             android:text="Children"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/total"
+        <TextView
+            android:id="@+id/totalDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Output"
+            android:textSize="25sp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_marginTop="20dp"/>
 
-        <EditText
+        <TextView
             android:id="@+id/adultEdit"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:text="Output"
+            android:textSize="25sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp" />
 
-        <EditText
-            android:id="@+id/children"
+        <TextView
+            android:id="@+id/childrenEdit"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:text="Output"
+            android:textSize="25sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp" />
     </GridLayout>
 
-    <EditText
+    <TextView
         android:layout_margin="20dp"
-        android:id="@+id/totalDisplay"
+        android:id="@+id/total"
         android:text="Total"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal"/>
-    <EditText
+    <TextView
         android:layout_margin="20dp"
         android:id="@+id/tax"
         android:text="Tax"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textSize="30sp"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
-    <EditText
+    <TextView
         android:layout_margin="20dp"
         android:id="@+id/grandTotal"
         android:text="Grand Total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="30sp"
         android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
