--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -70,7 +70,7 @@
         android:textColor="#8288AE"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:text="No. of adults"
+        android:hint="No. of adults"
         android:inputType="number"
         android:background="#C2D8EC"
         android:textSize="20sp"
@@ -80,7 +80,7 @@
         android:id="@+id/children"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No. of Children"
+        android:hint="No. of Children"
         android:textColor="#8288AE"
         android:inputType="number"
         android:background="#C2D8EC"
